# voice_assistant

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  clean.sh  conanfile.txt  default.nix  test.sh  voice_assistant_app.nix
cmake/: Version.cmake
include/: application.hpp  log.hpp  version.hpp  version.hpp.in
include/audio/capture/: sdl2_capture.hpp
src/: application.cpp  log.cpp  main.cpp
src/audio/capture/: sdl2_capture.cpp
test/: CMakeLists.txt
test/unit/: test.cpp
